--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,23 @@ engine: ejs
 current: index
 ---
 
-<h1>
-  這是一段話
-</h1>
-<a href="./page2.html" title="2"></a>
+
+<header class="header">
+  <div class="headerimg">
+      <div class="header container">
+          <div class="headerflex">
+              <h4>Promise-Desert 2020 早春系列</h4>
+              <h3>看得清，才能看得遠</h3>
+              <h5><a href="#">立刻購買</a></h5>
+          </div>
+      </div>
+  </div>   
+</header>
 <div class="box"></div>
 <main>
   <div class="sec2under">
       <section class="sec2 container">
+        <h2>用專業的心，做專業的事</h2>
           <div class="sec2grid">
               <div class="griditem">
                       <span class="material-symbols-outlined sec2icon1">
