--- a/app/index.html
+++ b/app/index.html
@@ -143,27 +143,26 @@ engine: ejs
             <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
             <form action="#">
                 <ul class="list_container">
-                    <li>
-                        <label for="name">姓名</label><br>
-                        <input type="text" class="input-text" name="name" placeholder="陳小明">
+                    <li class="w100">
+                        <label class="input_title">姓名</label><br>
+                        <input type="text" class="input-text" placeholder="陳小明">
                     </li>
                     <li>
-                        <label for="tel">連絡電話</label><br>
-                        <input type="text" class="input-text" name="tel" placeholder="0912-345-678">
+                        <label class="input_title">連絡電話</label><br>
+                        <input type="text" class="input-text" placeholder="0912-345-678">
                     </li>
                     <li>
-                        <label for="email">電子郵件</label><br>
-                        <input type="text" class="input-text" name="email" placeholder="example@email.com">
+                        <label class="input_title">電子郵件</label><br>
+                        <input type="text" class="input-text" placeholder="example@email.com">
                     </li>
                     <li>
-                        <label for="text">意見反應</label><br>
-                        <input type="text" class="input-text" name="text" placeholder="請輸入您的意見">
+                        <label class="input_title">意見反應</label><br>
+                        <input type="text" class="input-text feedback" placeholder="請輸入您的意見">
                     </li>
                     <li class="form_checkbox">
-                        <input type="checkbox" class="input_check" name="check">
+                        <input type="checkbox" class="input_check" >
                         <label for="check">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                     </li>
-
                     <li class="sumbit_btn">
                         <input type="button" class="input-btn" value="確認送出">
                     </li>
